# bedrock_app

./: README.md
vacation_planner/: AgentCore Installation and Run Guide  CrewAI Installation and Run Guide  Dockerfile  README.md  pyproject.toml  report.md  requirements.txt  streamlitui.py
vacation_planner/src/vacation_planner/: crew.py  main.py
vacation_planner/src/vacation_planner/config/: agents.yaml  tasks.yaml
